--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="menu" id="menu">
         <div class="title">
-            <h2 class="titleText">our <span>M</span>enu</h2>
+            <h2 class="titleText">Our <span>M</span>enu</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="content">
@@ -104,7 +104,7 @@
 
     <section class="expert" id="expert">
         <div class="title">
-            <h2 class="titleText">our Kitchen<span>E</span>xpert</h2>
+            <h2 class="titleText">Our Kitchen<span>E</span>xpert</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="content">
