--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <section class="expert" id="expert">
         <div class="title">
-            <h2 class="titleText">Our Kitchen<span>E</span>xpert</h2>
+            <h2 class="titleText">Our Kitchen <span>E</span>xpert</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="content">
@@ -184,19 +184,24 @@
             <h2 class="titleText"><span>C</span>ontact Us</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <div class="contactForm">
-            <h3>Send Message</h3>
-            <div class="inputBox">
-                <input type="text" placeholder="Name">
+        <div class="content">
+            <div class="contactForm">
+                <h3>Send Message</h3>
+                <div class="inputBox">
+                    <input type="text" placeholder="Name">
+                </div>
+                <div class="inputBox">
+                    <input type="text" placeholder="Email">
+                </div>
+                <div class="inputBox">
+                    <textarea placeholder="Message"></textarea>
+                </div>
+                <div class="inputBox">
+                    <input type="Submit" value="Send">
+                </div>
             </div>
-            <div class="inputBox">
-                <input type="text" placeholder="Email">
-            </div>
-            <div class="inputBox">
-                <textarea placeholder="Name"></textarea>
-            </div>
-            <div class="inputBox">
-                <input type="Submit" value="Send">
+            <div class="googleMap">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d466756.9357945669!2d90.69563595298642!3d23.94138870998884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x375410a874799185%3A0xaf4b58f0925d6a00!2sBrahmanbaria%20District!5e0!3m2!1sen!2sbd!4v1684649623528!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
